--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.15.5",
     "axios": "^0.21.1",
+    "i18next": "^23.7.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-h5-audio-player": "^3.7.0",
+    "react-i18next": "^13.5.0",
     "react-input-slider": "^6.0.0",
     "react-moment": "^1.1.1",
     "react-scripts": "4.0.3",
